[package]
name = "kroeg-cellar"
version = "0.1.0"
authors = ["Puck Meerburg <puck@puckipedia.com>"]

[dependencies]
jsonld = { path = "../jsonld-rs" }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
kroeg-tap = { path = "../tap/tap" }
futures = "0.1"
tokio-postgres = { git = "https://github.com/sfackler/rust-postgres", rev = "04bd98e7edb238511661b311c725a176012bca6a" }
futures-state-stream = "0.2"