[package]
name = "kroeg-cellar"
version = "0.2.0"
authors = ["Puck Meerburg <puck@puckipedia.com>"]
edition = "2018"
publish = false

[dependencies]
jsonld = { path = "../jsonld-rs" }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
kroeg-tap = { path = "../tap" }
async-std = "0.99.8"
postgres-async = { path = "./postgres-async" }
futures = "0.3.25"
async-trait = "0.1"
