[package]
name = "postgres-async"
version = "0.1.0"
authors = ["puckipedia"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-protocol = "0.4.1"
futures-preview = "0.3.0-alpha.18"
fallible-iterator = "0.2.0"
bytes = "0.4.12"
async-std = "0.99.8"
async-trait = "0.1"
